--- a/terminal-dashboard/Properties/launchSettings.json
+++ b/terminal-dashboard/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "terminal-dashboard": {
       "commandName": "Project",
-      "commandLineArgs": "\"CMatrix Red\""
+      "commandLineArgs": "\"CMatrix Red\";;;;;bottom"
     }
   }
 }
