Give option to change the terminal
Previously fixed on Windows Terminal, the terminal can now be chosen freely for each profile, defaulting to Windows Terminal when any is omitted.

--- a/terminal-dashboard/Properties/launchSettings.json
+++ b/terminal-dashboard/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "terminal-dashboard": {
       "commandName": "Project",
-      "commandLineArgs": "\"CMatrix Red\";;;;;bottom"
+      "commandLineArgs": "\"CMatrix Red;;;;;;\""
     }
   }
 }
