--- a/terminal-dashboard/Properties/launchSettings.json
+++ b/terminal-dashboard/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "terminal-dashboard": {
-      "commandName": "Project",
-      "commandLineArgs": "\"CMatrix Red;;;;;;\""
+      "commandName": "Project"
     }
   }
 }
